...
                        <Text
                          style={[
                            typography.titleMD,
                            { color: colors.textPrimary },
                          ]}
                        >
                          Continuar treino
                        </Text>
                        <Ionicons
                          name="arrow-forward"
                          size={20}
                          color={colors.primary}
                        />
...
                          style={[
                            typography.bodyMD,
                            s.link,
                            { color: colors.primary },
                          ]}
                        >
                          Ver alvos planejados
                        </Text>
                        <Ionicons
                          name="chevron-forward"
                          size={16}
                          color={colors.primary}
                        />
...
